force-app/main/default/objects/custom_create92__c/custom_create92__c.object-meta.xml
<CustomObject>
    <label>Custom created object92</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects92</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>