force-app/main/default/objects/custom_create92__c/fields/custom_create_92field546__c.field-meta.xml
<CustomField>
    <fullName>custom_create_92field546__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 92field546</label>
    <type>Checkbox</type>
</CustomField>